# hacs_sungrow_modbus

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  ISSUES.md  MODBUS_REGISTERS.md  README.md  TODO.md  hacs.json  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help.md  integration.md
.github/workflows/: hacs.yaml  labeler.yaml  lint.yaml  release.yaml
custom_components/sungrow_modbus/: __init__.py  battery_controller.py  client_manager.py  config_flow.py  const.py  data_retrieval.py  helpers.py  manifest.json  modbus_controller.py  number.py  select.py  sensor.py  (+3 more)
dashboards/: README.md  auto_entities_dashboard.yaml  hybrid_inverter.yaml
scripts/: live_connection_check.py  test_live_connection.py
tests/: README.md  conftest.py  test_alarm_codes.py  test_battery_controller.py  test_battery_sensor.py  test_binary_sensor.py  test_circuit_breaker.py  test_client_manager.py  test_config_flow.py  test_data_retrieval.py  test_derived_sensor.py  test_helpers.py  test_integration_setup.py  test_live_device.py  test_modbus_controller.py  test_model_overrides.py  test_multi_inverter.py  test_number.py  test_number_entity.py  test_register_cache.py  test_select_definitions_from_code.py  test_select_entity.py  test_sensor_definitions.py  test_sensor_platform.py  test_services.py  test_string_sensors.py  test_sungrow_select_entity.py  test_switch_conflicts_requires.py  test_switch_definitions_from_code.py  test_time_entity.py  test_unique_id_collision.py  test_unique_id_migration.py  test_validation.py
(+25 files in other folders)
